--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "residat-project",
+  "name": "residat",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,17 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.27.3",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
+    "vue-apexcharts": "^1.6.1",
+    "vue-axios": "^3.2.4",
+    "vue-gtag": "^1.16.1",
+    "vue-inline-svg": "^2.0.0",
+    "vue-router": "^3.5.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-eslint": "^3.1.1",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^4.5.13",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
